src/org/apache/cassandra/cql/compiler/parse/CqlParser.java
// $ANTLR 3.0.1 /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g 2008-10-24 16:15:03

            package org.apache.cassandra.cql.compiler.parse;
        

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
public class CqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A_DELETE", "A_GET", "A_SELECT", "A_SET", "A_EXPLAIN_PLAN", "A_COLUMN_ACCESS", "A_COLUMN_MAP_ENTRY", "A_COLUMN_MAP_VALUE", "A_FROM", "A_KEY_IN_LIST", "A_KEY_EXACT_MATCH", "A_LIMIT", "A_OFFSET", "A_ORDER_BY", "A_SUPERCOLUMN_MAP_ENTRY", "A_SUPERCOLUMN_MAP_VALUE", "A_SELECT_CLAUSE", "A_WHERE", "SEMICOLON", "K_EXPLAIN", "K_PLAN", "K_GET", "K_SET", "K_SELECT", "K_FROM", "K_WHERE", "K_IN", "K_LIMIT", "IntegerLiteral", "K_DELETE", "Identifier", "LEFT_BRACE", "COMMA", "RIGHT_BRACE", "ASSOC", "StringLiteral", "K_BY", "K_OFFSET", "K_ORDER", "Letter", "Digit", "WS", "COMMENT", "'='", "'('", "')'", "'['", "']'", "'.'", "'?'"
    };
    public static final int K_EXPLAIN=23;
    public static final int K_OFFSET=41;
    public static final int K_GET=25;
    public static final int K_DELETE=33;
    public static final int A_KEY_EXACT_MATCH=14;
    public static final int K_BY=40;
    public static final int A_SELECT=6;
    public static final int A_SUPERCOLUMN_MAP_VALUE=19;
    public static final int EOF=-1;
    public static final int K_SELECT=27;
    public static final int K_LIMIT=31;
    public static final int Identifier=34;
    public static final int K_SET=26;
    public static final int K_WHERE=29;
    public static final int COMMA=36;
    public static final int A_EXPLAIN_PLAN=8;
    public static final int A_LIMIT=15;
    public static final int COMMENT=46;
    public static final int K_ORDER=42;
    public static final int RIGHT_BRACE=37;
    public static final int A_COLUMN_MAP_VALUE=11;
    public static final int SEMICOLON=22;
    public static final int K_IN=30;
    public static final int Digit=44;
    public static final int A_OFFSET=16;
    public static final int A_WHERE=21;
    public static final int K_PLAN=24;
    public static final int A_ORDER_BY=17;
    public static final int K_FROM=28;
    public static final int StringLiteral=39;
    public static final int A_COLUMN_MAP_ENTRY=10;
    public static final int WS=45;
    public static final int A_FROM=12;
    public static final int A_GET=5;
    public static final int LEFT_BRACE=35;
    public static final int A_KEY_IN_LIST=13;
    public static final int A_COLUMN_ACCESS=9;
    public static final int A_SUPERCOLUMN_MAP_ENTRY=18;
    public static final int IntegerLiteral=32;
    public static final int ASSOC=38;
    public static final int A_SELECT_CLAUSE=20;
    public static final int Letter=43;
    public static final int A_DELETE=4;
    public static final int A_SET=7;

        public CqlParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[53+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "/home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g"; }


    public static class root_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start root
    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:112:1: root : ( stmt ( SEMICOLON )? EOF -> stmt | K_EXPLAIN K_PLAN stmt ( SEMICOLON )? EOF -> ^( A_EXPLAIN_PLAN stmt ) );
    public final root_return root() throws RecognitionException {
        root_return retval = new root_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token SEMICOLON2=null;
        Token EOF3=null;
        Token K_EXPLAIN4=null;
        Token K_PLAN5=null;
        Token SEMICOLON7=null;
        Token EOF8=null;
        stmt_return stmt1 = null;

        stmt_return stmt6 = null;


        CommonTree SEMICOLON2_tree=null;
        CommonTree EOF3_tree=null;
        CommonTree K_EXPLAIN4_tree=null;
        CommonTree K_PLAN5_tree=null;
        CommonTree SEMICOLON7_tree=null;
        CommonTree EOF8_tree=null;
        RewriteRuleTokenStream stream_K_EXPLAIN=new RewriteRuleTokenStream(adaptor,"token K_EXPLAIN");
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_K_PLAN=new RewriteRuleTokenStream(adaptor,"token K_PLAN");
        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        try {
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:113:5: ( stmt ( SEMICOLON )? EOF -> stmt | K_EXPLAIN K_PLAN stmt ( SEMICOLON )? EOF -> ^( A_EXPLAIN_PLAN stmt ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=K_GET && LA3_0<=K_SELECT)||LA3_0==K_DELETE) ) {
                alt3=1;
            }
            else if ( (LA3_0==K_EXPLAIN) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("112:1: root : ( stmt ( SEMICOLON )? EOF -> stmt | K_EXPLAIN K_PLAN stmt ( SEMICOLON )? EOF -> ^( A_EXPLAIN_PLAN stmt ) );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:113:7: stmt ( SEMICOLON )? EOF
                    {
                    pushFollow(FOLLOW_stmt_in_root266);
                    stmt1=stmt();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_stmt.add(stmt1.getTree());
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:113:12: ( SEMICOLON )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==SEMICOLON) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:0:0: SEMICOLON
                            {
                            SEMICOLON2=(Token)input.LT(1);
                            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_root268); if (failed) return retval;
                            if ( backtracking==0 ) stream_SEMICOLON.add(SEMICOLON2);


                            }
                            break;

                    }

                    EOF3=(Token)input.LT(1);
                    match(input,EOF,FOLLOW_EOF_in_root271); if (failed) return retval;
                    if ( backtracking==0 ) stream_EOF.add(EOF3);


                    // AST REWRITE
                    // elements: stmt
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 113:27: -> stmt
                    {
                        adaptor.addChild(root_0, stream_stmt.next());

                    }

                    }

                    }
                    break;
                case 2 :
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:114:7: K_EXPLAIN K_PLAN stmt ( SEMICOLON )? EOF
                    {
                    K_EXPLAIN4=(Token)input.LT(1);
                    match(input,K_EXPLAIN,FOLLOW_K_EXPLAIN_in_root283); if (failed) return retval;
                    if ( backtracking==0 ) stream_K_EXPLAIN.add(K_EXPLAIN4);

                    K_PLAN5=(Token)input.LT(1);
                    match(input,K_PLAN,FOLLOW_K_PLAN_in_root285); if (failed) return retval;
                    if ( backtracking==0 ) stream_K_PLAN.add(K_PLAN5);

                    pushFollow(FOLLOW_stmt_in_root287);
                    stmt6=stmt();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) stream_stmt.add(stmt6.getTree());
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:114:29: ( SEMICOLON )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==SEMICOLON) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:0:0: SEMICOLON
                            {
                            SEMICOLON7=(Token)input.LT(1);
                            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_root289); if (failed) return retval;
                            if ( backtracking==0 ) stream_SEMICOLON.add(SEMICOLON7);


                            }
                            break;

                    }

                    EOF8=(Token)input.LT(1);
                    match(input,EOF,FOLLOW_EOF_in_root292); if (failed) return retval;
                    if ( backtracking==0 ) stream_EOF.add(EOF8);


                    // AST REWRITE
                    // elements: stmt
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 114:44: -> ^( A_EXPLAIN_PLAN stmt )
                    {
                        // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:114:47: ^( A_EXPLAIN_PLAN stmt )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(A_EXPLAIN_PLAN, "A_EXPLAIN_PLAN"), root_1);

                        adaptor.addChild(root_1, stream_stmt.next());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end root

    public static class stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start stmt
    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:117:1: stmt : ( deleteStmt | getStmt | selectStmt | setStmt );
    public final stmt_return stmt() throws RecognitionException {
        stmt_return retval = new stmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        deleteStmt_return deleteStmt9 = null;

        getStmt_return getStmt10 = null;

        selectStmt_return selectStmt11 = null;

        setStmt_return setStmt12 = null;



        try {
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:118:5: ( deleteStmt | getStmt | selectStmt | setStmt )
            int alt4=4;
            switch ( input.LA(1) ) {
            case K_DELETE:
                {
                alt4=1;
                }
                break;
            case K_GET:
                {
                alt4=2;
                }
                break;
            case K_SELECT:
                {
                alt4=3;
                }
                break;
            case K_SET:
                {
                alt4=4;
                }
                break;
            default:
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("117:1: stmt : ( deleteStmt | getStmt | selectStmt | setStmt );", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:118:7: deleteStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_deleteStmt_in_stmt317);
                    deleteStmt9=deleteStmt();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, deleteStmt9.getTree());

                    }
                    break;
                case 2 :
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:119:7: getStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_getStmt_in_stmt325);
                    getStmt10=getStmt();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, getStmt10.getTree());

                    }
                    break;
                case 3 :
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:120:7: selectStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_selectStmt_in_stmt333);
                    selectStmt11=selectStmt();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, selectStmt11.getTree());

                    }
                    break;
                case 4 :
                    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:121:7: setStmt
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_setStmt_in_stmt341);
                    setStmt12=setStmt();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, setStmt12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end stmt

    public static class getStmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start getStmt
    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:124:1: getStmt : K_GET columnSpec -> ^( A_GET columnSpec ) ;
    public final getStmt_return getStmt() throws RecognitionException {
        getStmt_return retval = new getStmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_GET13=null;
        columnSpec_return columnSpec14 = null;


        CommonTree K_GET13_tree=null;
        RewriteRuleTokenStream stream_K_GET=new RewriteRuleTokenStream(adaptor,"token K_GET");
        RewriteRuleSubtreeStream stream_columnSpec=new RewriteRuleSubtreeStream(adaptor,"rule columnSpec");
        try {
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:125:5: ( K_GET columnSpec -> ^( A_GET columnSpec ) )
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:125:7: K_GET columnSpec
            {
            K_GET13=(Token)input.LT(1);
            match(input,K_GET,FOLLOW_K_GET_in_getStmt358); if (failed) return retval;
            if ( backtracking==0 ) stream_K_GET.add(K_GET13);

            pushFollow(FOLLOW_columnSpec_in_getStmt360);
            columnSpec14=columnSpec();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_columnSpec.add(columnSpec14.getTree());

            // AST REWRITE
            // elements: columnSpec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 125:25: -> ^( A_GET columnSpec )
            {
                // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:125:28: ^( A_GET columnSpec )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(A_GET, "A_GET"), root_1);

                adaptor.addChild(root_1, stream_columnSpec.next());

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end getStmt

    public static class setStmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start setStmt
    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:128:1: setStmt : K_SET columnSpec '=' valueExpr -> ^( A_SET columnSpec valueExpr ) ;
    public final setStmt_return setStmt() throws RecognitionException {
        setStmt_return retval = new setStmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_SET15=null;
        Token char_literal17=null;
        columnSpec_return columnSpec16 = null;

        valueExpr_return valueExpr18 = null;


        CommonTree K_SET15_tree=null;
        CommonTree char_literal17_tree=null;
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_K_SET=new RewriteRuleTokenStream(adaptor,"token K_SET");
        RewriteRuleSubtreeStream stream_valueExpr=new RewriteRuleSubtreeStream(adaptor,"rule valueExpr");
        RewriteRuleSubtreeStream stream_columnSpec=new RewriteRuleSubtreeStream(adaptor,"rule columnSpec");
        try {
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:129:5: ( K_SET columnSpec '=' valueExpr -> ^( A_SET columnSpec valueExpr ) )
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:129:7: K_SET columnSpec '=' valueExpr
            {
            K_SET15=(Token)input.LT(1);
            match(input,K_SET,FOLLOW_K_SET_in_setStmt386); if (failed) return retval;
            if ( backtracking==0 ) stream_K_SET.add(K_SET15);

            pushFollow(FOLLOW_columnSpec_in_setStmt388);
            columnSpec16=columnSpec();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_columnSpec.add(columnSpec16.getTree());
            char_literal17=(Token)input.LT(1);
            match(input,47,FOLLOW_47_in_setStmt390); if (failed) return retval;
            if ( backtracking==0 ) stream_47.add(char_literal17);

            pushFollow(FOLLOW_valueExpr_in_setStmt392);
            valueExpr18=valueExpr();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_valueExpr.add(valueExpr18.getTree());

            // AST REWRITE
            // elements: valueExpr, columnSpec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 129:38: -> ^( A_SET columnSpec valueExpr )
            {
                // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:129:41: ^( A_SET columnSpec valueExpr )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(adaptor.create(A_SET, "A_SET"), root_1);

                adaptor.addChild(root_1, stream_columnSpec.next());
                adaptor.addChild(root_1, stream_valueExpr.next());

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end setStmt

    public static class selectStmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start selectStmt
    // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:132:1: selectStmt : selectClause ( fromClause )? ( whereClause )? ( limitClause )? -> ^( A_SELECT selectClause ( fromClause )? ( whereClause )? ( limitClause )? ) ;
    public final selectStmt_return selectStmt() throws RecognitionException {
        selectStmt_return retval = new selectStmt_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        selectClause_return selectClause19 = null;

        fromClause_return fromClause20 = null;

        whereClause_return whereClause21 = null;

        limitClause_return limitClause22 = null;


        RewriteRuleSubtreeStream stream_whereClause=new RewriteRuleSubtreeStream(adaptor,"rule whereClause");
        RewriteRuleSubtreeStream stream_limitClause=new RewriteRuleSubtreeStream(adaptor,"rule limitClause");
        RewriteRuleSubtreeStream stream_selectClause=new RewriteRuleSubtreeStream(adaptor,"rule selectClause");
        RewriteRuleSubtreeStream stream_fromClause=new RewriteRuleSubtreeStream(adaptor,"rule fromClause");
        try {
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:133:5: ( selectClause ( fromClause )? ( whereClause )? ( limitClause )? -> ^( A_SELECT selectClause ( fromClause )? ( whereClause )? ( limitClause )? ) )
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:133:7: selectClause ( fromClause )? ( whereClause )? ( limitClause )?
            {
            pushFollow(FOLLOW_selectClause_in_selectStmt419);
            selectClause19=selectClause();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_selectClause.add(selectClause19.getTree());
            // /home/kannan/fbomb/trunk/fbcode/cassandra/src/com/facebook/infrastructure/cql/compiler/parse/Cql.g:134:9: ( fromClause )?
            int alt5=2;
            int LA5_0 = input.LA(1);
